# spinoza

./: CMakeLists.txt  README.md
examples/bicycle_racing/: README.md  bicycle_racing.cpp  bicycle_racing2.cpp  plot_bicycle_racing.py
examples/capacitor torque/: README.md  capacitor_particles.cpp  plot_capacitor_particles.py
examples/particles/: README.md  plot_electron.py  two_body_problem.cpp
include/: Field.hpp  Function.hpp  GeometricObject.hpp  Gradient.hpp  KinectEnergy.h  LinearTransformation.hpp  Momentum.h  PartialDerivative.h  PartialDerivative.hpp  Path.hpp  Position.h  ScalarField.hpp  ScalarFunction.hpp  ScalarIntegral.hpp  ScallarField.hpp  Solid.hpp  Space.hpp  Surface.hpp  Vector.hpp  VectorField.h  VectorField.hpp  VectorFunction.hpp  VectorIntegral.hpp  VectorSpace.hpp  Velocity.h
include/AnalyticGeometry/: GeometricObject.hpp  Path.hpp  Point.hpp  Solid.hpp  Surface.hpp
include/Calculus/: Gradient.hpp  PartialDerivative.hpp  ScalarFunction.hpp  ScalarIntegral.hpp  VectorFunction.hpp  VectorIntegral.hpp
include/LinearAlgebra/: LinearTransformation.hpp  ScalarField.hpp  Space.hpp  Vector.hpp  VectorField.hpp
include/Physics/: Acceleration.hpp  Body.h  Body.hpp  Capacitor.h  ElectromagneticField.hpp  Force.hpp  GravitationalField.hpp  Particle.h  Space.h  Space.hpp
src/: Body.cpp  Capacitor.cpp  KinectEnergy.cpp  Momentum.cpp  Particle.cpp  Position.cpp  Space.cpp  Velocity.cpp  main.cpp
